chore: update deployment workflow to use 'main' branch instead of 'master'

--- a/.github/workflows/deploiement.yml
+++ b/.github/workflows/deploiement.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           node-version: 20
       - name: load linter
-        run: npm lint
+        run: npm run lint
 
   test:
     needs: lint
